Feat(): Add project

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,14 +4,15 @@
  *
  ************************************/
 
-@import "_variables";
-@import "_fonts";
+@import "variables";
+@import "fonts";
 
 /**
  * LAYOUT
  */
 
 @import "layout/layout";
+@import "components/buttons";
 
 
 /**
@@ -25,3 +26,4 @@
  */
 
 @import "views/home";
+@import "views/login";
