--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,16 +1,14 @@
-<ion-side-menus>
+<ion-side-menus enable-menu-with-back-views="false">
     <!-- Center content -->
     <ion-side-menu-content>
-
         <ion-nav-view name="viewContent">
-
         </ion-nav-view>
     </ion-side-menu-content>
 
     <!-- Left menu -->
-    <ion-side-menu side="left" class="side-menu">
+    <ion-side-menu side="right" class="side-menu">
 
-        <ion-header-bar align-title="center" class="bar-positive">
+        <ion-header-bar align-title="center" class="bar-clear">
             <h1 class="title">Side Menu</h1>
         </ion-header-bar>
 
@@ -28,3 +26,4 @@
         </ion-content>
     </ion-side-menu>
 </ion-side-menus>
+
