--- a/app/templates/views/home.html
+++ b/app/templates/views/home.html
@@ -1,19 +1,15 @@
 <ion-view>
-    <ion-header-bar align-title="center" class="bar-positive">
-    <button class="button button-icon icon ion-navicon" menu-toggle="left"></button>
-        <h1 class="title">Gulp Ionic Seed</h1>
-    </ion-header-bar>
-
-    <ion-content>
-        <ion-refresher
-            pulling-text="Pull to refresh..."
-            on-refresh="fetchRandomText()">
-        </ion-refresher>
-        <div class="loader" ng-if="!myHTML">
-            <ion-spinner></ion-spinner>
-        </div>
-        <div class="content" ng-bind-html="myHTML">
-        </div>
-    </ion-content>
-
+<ion-header-bar align-title="center" class="bar-clear">
+<h1 class="title">MAP</h1>
+<button class="button button-icon icon ion-navicon" menu-toggle="right"></button>
+</ion-header-bar>
+<ion-content>
+<div class="map-container">
+	<div id="map" data-tap-disabled="true"></div>
+	<div class="event-details">
+		<i class="icon ion-eye"></i>
+		<h2>EventOne</h2>
+	</div>
+</div>
+</ion-content>
 </ion-view>
